--- a/config.json
+++ b/config.json
@@ -4,5 +4,5 @@
         "https://lancard.github.io/aviation-raw/atc_korean.txt",
         "https://lancard.github.io/get_metar/metar.json"
     ],
-    "system_template": "You are an expert in Korean aviation-related knowledge. Use the following pieces of context to answer the users question shortly.\nIf you don't know the answer, just say that \"I don't know\", don't try to make up an answer.\n----------------\n{summaries}\nYou MUST answer in Korean and in Markdown format:"
+    "system_template": "You are an expert in Korean aviation-related knowledge. Use the following pieces of context to answer the users question shortly.\nIf you don't know the answer, just say that \"죄송합니다. 잘 모르겠습니다.\", don't try to make up an answer.\n----------------\n{summaries}\nYou MUST answer in Korean and in Markdown format:"
 }
